secondfile/objects/Project_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Incremental_Revenue_TCV__c</fullName>
        <label>Actual Incremental Revenue (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Ids__c</fullName>
        <label>Associated Opportunity Ids</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Hours_to_Obtain_Lead__c</fullName>
        <label>Avg Hours to Obtain Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Opened_Read__c</fullName>
        <label>Emails Opened/Read</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDF_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Claim</label>
        <referenceTo>Market_Development_Fund__c</referenceTo>
        <relationshipLabel>Project Activitys (MDF Claim)</relationshipLabel>
        <relationshipName>Project_Activitys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Request</label>
        <referenceTo>Market_Development_Fund__c</referenceTo>
        <relationshipLabel>Project Activitys</relationshipLabel>
        <relationshipName>Project_Activitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Circulated_Distributed__c</fullName>
        <label>Number Circulated/Distributed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Collateral_Circulated_Distributed__c</fullName>
        <label>Number Collateral Circulated/Distributed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_distributed_or_downloaded__c</fullName>
        <label>Number distributed or downloaded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Calls_Made__c</fullName>
        <label>Number of Calls Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Click_throughs__c</fullName>
        <label>Number of Click-throughs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Decision_Makers_Reached__c</fullName>
        <label>Number of Decision Makers Reached</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Followers_Social__c</fullName>
        <label>Number of Followers (Social)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_New_Contacts__c</fullName>
        <label>Number of New Contacts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Promotional_Items_Purchased__c</fullName>
        <label>Number of Promotional Items Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Registered_Deals__c</fullName>
        <label>Number of Registered Deals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Runs__c</fullName>
        <label>Number of Runs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Generated__c</fullName>
        <label>Number of Sales Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Leads__c</fullName>
        <label>Number of Sales Leads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Speaking_Engagements__c</fullName>
        <label>Number of Speaking Engagements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_downloads__c</fullName>
        <label>Number of downloads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_people_involved__c</fullName>
        <label>Number of people involved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_reached_readers__c</fullName>
        <label>Number of reached readers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_site_visits_post_activity__c</fullName>
        <label>Number of site visits (post activity)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_site_visits_pre_activity__c</fullName>
        <label>Number of site visits (pre activity)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_times_demoed__c</fullName>
        <label>Number of times demoed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numbers_Provided_from_Print_Medium__c</fullName>
        <label>Numbers Provided from Print Medium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Funnel_Growth__c</fullName>
        <label>Percentage of Funnel Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Traffic_Increase_on_Site__c</fullName>
        <label>Percentage of Traffic Increase on Site</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Activity Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Activity_ROI__c</fullName>
        <label>Project Activity ROI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Activity_Status__c</fullName>
        <label>Project Activity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <label>Project Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV_earned_from_Leads__c</fullName>
        <label>TCV earned from Leads</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours_Called__c</fullName>
        <label>Total Number of Hours Called</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Visitors__c</fullName>
        <label>Unique Visitors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>press_releases_case_studies_produced__c</fullName>
        <label># press releases/case studies produced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Activity</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Project Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activitys</pluralLabel>
    <recordTypes>
        <fullName>Advertising_Audio_Video</fullName>
        <active>true</active>
        <label>Advertising - Audio Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>Advertising_Online</fullName>
        <active>true</active>
        <label>Advertising - Online</label>
    </recordTypes>
    <recordTypes>
        <fullName>Advertising_Print</fullName>
        <active>true</active>
        <label>Advertising - Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collateral_Production</fullName>
        <active>true</active>
        <description>Collateral Production (Print, PDF, Online Tools)</description>
        <label>Collateral Production</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Success_Stories</fullName>
        <active>true</active>
        <description>Customer Success Stories (PR, Case Studies, Written, Video)</description>
        <label>Customer Success Stories</label>
    </recordTypes>
    <recordTypes>
        <fullName>Demo</fullName>
        <active>true</active>
        <description>Demo (Products and Services)</description>
        <label>Demo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Marketing</fullName>
        <active>true</active>
        <label>Digital Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Marketing_Direct_Mail_and_Email</fullName>
        <active>true</active>
        <description>Direct Marketing (Direct Mail and Email)</description>
        <label>Direct Marketing (Direct Mail and Email)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Marketing_Telemarketing</fullName>
        <active>true</active>
        <description>Direct Marketing (Telemarketing)</description>
        <label>Direct Marketing (Telemarketing)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Channel</fullName>
        <active>true</active>
        <description>Events - Channel (Conferences, Tradeshows)</description>
        <label>Events - Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Hosted</fullName>
        <active>true</active>
        <description>Events - Hosted by Participant or AT&amp;T Partner Exchange (Seminars, Webinars, Briefings)</description>
        <label>Events - Hosted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promo_Merchandise</fullName>
        <active>true</active>
        <description>Promotional Merchandise/ Halo Purchases</description>
        <label>Promo Merchandise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Incentive</fullName>
        <active>true</active>
        <description>Sales Incentives (Including Contests and SPIFFs)</description>
        <label>Sales Incentive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Training</fullName>
        <active>true</active>
        <description>Technical Training (AT&amp;T Partner Exchange Program Products)</description>
        <label>Technical Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Development</fullName>
        <active>true</active>
        <label>Website Development</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>